Fixing triple column glitch again, got equal height but icon is not centered

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -180,11 +180,18 @@ article.body {
       // min-height: 505px;
       padding: 4rem;
       background-color: $bg-black;
-      margin-top: 4rem + 2rem;
+      //margin-top: 4rem + 2rem;
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      -webkit-flex: 1; /* Safari 6.1+ */
+      -ms-flex: 1; /* IE 10 */ 
+      flex: 1;
+      
       @media (max-width: 992px) {
         margin-bottom: 4rem;
       }
+      
       p {
         text-align: left;
       }
@@ -208,6 +215,7 @@ article.body {
         display: block;
       }
       &.cyan {
+        display: flex; 
         border-color: $cyan;
         img {
           border-color: $cyan;
@@ -217,6 +225,7 @@ article.body {
         }
       }
       &.lavender {
+        display: flex; 
         border-color: $lavender;
         img {
           border-color: $lavender;
@@ -226,6 +235,7 @@ article.body {
         }
       }
       &.pink {
+        display: flex; 
         border-color: $pink;
         img {
           border-color: $pink;
@@ -425,7 +435,19 @@ article.footer {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
-  display:         flex; }
+  display:         flex;
+  flex-wrap: wrap;
+}
+
+.row-eq-height > [class*='col-'] {
+  display: flex;
+  flex-direction: column;
+  //-webkit-flex: 1; /* Safari 6.1+ */
+  //-ms-flex: 1; /* IE 10 */ 
+  //flex: 1;
+    
+}
+
 
 @-webkit-keyframes GradientAnimation {
     0%{background-position:0% 50%}
